--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase-admin": "^13.6.0",
     "next": "16.1.1",
     "openai": "^6.16.0",
+    "qrcode": "^1.5.4",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
