--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build --webpack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "geo:no": "node scripts/generate-no-municipalities.mjs",
+    "geo:no:watch": "node scripts/generate-no-municipalities.mjs && next dev"
   },
   "dependencies": {
     "@react-pdf/renderer": "^4.3.2",
@@ -20,6 +22,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
