WIP: before lint cleanup

--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build --webpack",
-    "start": "next start",
-    "lint": "eslint",
-    "geo:no": "node scripts/generate-no-municipalities.mjs",
-    "geo:no:watch": "node scripts/generate-no-municipalities.mjs && next dev"
-  },
+  "dev": "next dev",
+  "build": "next build --webpack",
+  "start": "next start",
+  "lint": "eslint app lib components",
+  "geo:no": "node scripts/generate-no-municipalities.mjs",
+  "geo:no:watch": "node scripts/generate-no-municipalities.mjs && next dev"
+},
   "dependencies": {
     "@react-pdf/renderer": "^4.3.2",
     "firebase": "^12.7.0",
